deploy/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: quaranteam-backend
  name: quaranteam-backend
spec:
  ports:
    - name: http
      port: 3001
      protocol: TCP
      targetPort: 3001
  selector:
    app: quaranteam-backend
  type: ClusterIP
