deploy/dev/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quaranteam-backend
spec:
  podSelector:
    matchLabels:
      app: quaranteam-backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - port: 80
        - port: 3001
  egress:
    - ports:
        # Don't forget DNS
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
        # HTTP and HTTPS APIs
        - port: 80
        - port: 443
        # E-mail
        - port: 25
        - port: 2525
        # MongoDB
        - port: 27017
